# dystopia

./: .gitignore  README.md  data.xlsx
.devcontainer/: devcontainer.json
autolamp/: Cargo.toml
autolamp/src/: main.rs
backend/: Cargo.toml  phillip-sucks.xlsx
backend/assets/: index.html  style.css
backend/src/: 12.rs  fundamentals.rs  main.md  main.rs  mongodb.rs  spreadsheet.rs
backend/src/models/: fundamentals.rs  spectacle.rs
