[package]
name = "dystopia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = "1.28.2"
umya-spreadsheet = "2.1.2"
serde_json="1.0.132"
serde="1.0.214"
bytes="1.8.0"
tower-http = { version = "0.5.0", features = ["fs"] }
mongodb="3.1.0"
polars= { version = "0.44.2", features = ["json", "lazy"] }
polars-io = "0.44.2"
# load .env
dotenvy="0.15"

# really old but needed for turso!
# https://github.com/shuttle-hq/shuttle-examples/issues/184#issuecomment-2296950163
# libsql = "0.3.1"
# shuttle-turso = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-axum = "0.49.0"
